--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
-org.gradle.jvmargs=-XX:MaxPermSize=512m
 
 deployUrl=file:///Users/cer/.m2/testdeploy
 
-eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-release/,https://dl.bintray.com/eventuateio-oss/eventuate-maven-milestone,file:///Users/cer/.m2/testdeploy,https://dl.bintray.com/eventuateio-oss/eventuate-maven-rc,https://snapshots.repositories.eventuate.io/repository
+eventuateMavenRepoUrl=file:///Users/cer/.m2/testdeploy,https://snapshots.repositories.eventuate.io/repository
 
 springBootVersion=2.1.5.RELEASE
 micronautVersion=2.4.1
 
-eventuateExamplesBaseImageVersion=BUILD-6
-eventuatePlatformVersion=2021.3.RELEASE
-eventuateUtilVersion=0.10.0.RELEASE
+eventuateExamplesBaseImageVersion=BUILD-16
+eventuatePlatformVersion=2022.0.RELEASE
+eventuateUtilVersion=0.14.1.RELEASE
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.14.0.RELEASE
+eventuateMessagingKafkaVersion=0.15.0.RELEASE
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.14.0.RELEASE
-eventuateCdcImageVersion=0.12.0.RELEASE
+eventuateCommonImageVersion=0.15.0.RELEASE
+eventuateMessagingKafkaImageVersion=0.15.0.RELEASE
+eventuateCdcImageVersion=0.13.0.RELEASE
