--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -61,7 +61,7 @@ services:
       JAVA_OPTS: -Xmx32m
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:5.2.4
+    image: eventuateio/eventuate-zookeeper:$EVENTUATE_COMMON_VERSION
     ports:
       - 2181:2181
     environment:
@@ -69,7 +69,7 @@ services:
       KAFKA_HEAP_OPTS: -Xmx64m
 
   kafka:
-    image: "confluentinc/cp-kafka:5.2.4"
+    image: "eventuateio/eventuate-kafka:$EVENTUATE_MESSAGING_KAFKA_IMAGE_VERSION"
     ports:
       - 9092:9092
       - 29092:29092
@@ -85,7 +85,7 @@ services:
       KAFKA_HEAP_OPTS: -Xmx192m
 
   mysql:
-    image: eventuateio/eventuate-mysql:$EVENTUATE_COMMON_VERSION
+    image: eventuateio/eventuate-mysql8:$EVENTUATE_COMMON_VERSION
     ports:
       - 3306:3306
     environment:
