--- a/docker-compose-postgres-polling.yml
+++ b/docker-compose-postgres-polling.yml
@@ -64,7 +64,7 @@ services:
       JAVA_OPTS: -Xmx32m
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:5.2.4
+    image: eventuateio/eventuate-zookeeper:$EVENTUATE_COMMON_VERSION
     ports:
       - 2181:2181
     environment:
@@ -72,7 +72,7 @@ services:
       KAFKA_HEAP_OPTS: -Xmx64m
 
   kafka:
-    image: "confluentinc/cp-kafka:5.2.4"
+    image: "eventuateio/eventuate-kafka:$EVENTUATE_MESSAGING_KAFKA_IMAGE_VERSION"
     ports:
       - 9092:9092
       - 29092:29092
