--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,12 @@ springBootVersion=2.1.5.RELEASE
 micronautVersion=2.4.1
 
 eventuateExamplesBaseImageVersion=BUILD-16
-eventuatePlatformVersion=2022.0.RELEASE
-eventuateUtilVersion=0.14.1.RELEASE
+eventuatePlatformVersion=2022.1.BUILD-SNAPSHOT
+eventuateUtilVersion=0.15.0.BUILD-SNAPSHOT
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.15.0.RELEASE
+eventuateMessagingKafkaVersion=0.16.0.BUILD-SNAPSHOT
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.15.0.RELEASE
-eventuateMessagingKafkaImageVersion=0.15.0.RELEASE
-eventuateCdcImageVersion=0.13.0.RELEASE
+eventuateCommonImageVersion=0.16.0.BUILD-SNAPSHOT
+eventuateMessagingKafkaImageVersion=0.16.0.BUILD-SNAPSHOT
+eventuateCdcImageVersion=0.14.0.BUILD-SNAPSHOT
