Upgrade to RELEASE versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ springBootVersion=2.1.5.RELEASE
 micronautVersion=2.4.1
 
 eventuateExamplesBaseImageVersion=BUILD-16
-eventuatePlatformVersion=2022.2.BUILD-SNAPSHOT
+eventuatePlatformVersion=2022.2.RELEASE
 eventuateUtilVersion=0.15.0.RELEASE
 dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.16.0.RELEASE
