--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,12 @@ springBootVersion=2.1.5.RELEASE
 micronautVersion=2.4.1
 
 eventuateExamplesBaseImageVersion=BUILD-16
-eventuatePlatformVersion=2024.0.RELEASE
-eventuateUtilVersion=0.17.0.RELEASE
+eventuatePlatformVersion=2025.0.BUILD-SNAPSHOT
+eventuateUtilVersion=0.18.0.BUILD-SNAPSHOT
 dockerComposePluginVersion=0.16.12
-eventuateMessagingKafkaVersion=0.19.0.RELEASE
+eventuateMessagingKafkaVersion=0.20.0.BUILD-SNAPSHOT
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.19.0.RELEASE
-eventuateMessagingKafkaImageVersion=0.19.0.RELEASE
-eventuateCdcImageVersion=0.17.0.RELEASE
+eventuateCommonImageVersion=0.20.0.BUILD-SNAPSHOT
+eventuateMessagingKafkaImageVersion=0.20.0.BUILD-SNAPSHOT
+eventuateCdcImageVersion=0.18.0.BUILD-SNAPSHOT
