Upgraded eventuate dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,12 @@ springBootVersion=2.1.5.RELEASE
 micronautVersion=2.4.1
 
 eventuateExamplesBaseImageVersion=BUILD-16
-eventuatePlatformVersion=2025.0.BUILD-SNAPSHOT
-eventuateUtilVersion=0.18.0.BUILD-SNAPSHOT
+eventuatePlatformVersion=2025.0.RELEASE
+eventuateUtilVersion=0.18.0.RELEASE
 dockerComposePluginVersion=0.16.12
-eventuateMessagingKafkaVersion=0.20.0.BUILD-SNAPSHOT
+eventuateMessagingKafkaVersion=0.20.0.RELEASE
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.20.0.BUILD-SNAPSHOT
-eventuateMessagingKafkaImageVersion=0.20.0.BUILD-SNAPSHOT
-eventuateCdcImageVersion=0.18.0.BUILD-SNAPSHOT
+eventuateCommonImageVersion=0.20.0.RELEASE
+eventuateMessagingKafkaImageVersion=0.20.0.RELEASE
+eventuateCdcImageVersion=0.18.0.RELEASE
